--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
                             <p>TODO-Titel</p>
                         </div>
                         <!-- <div style="height: 1rem; width: auto;">                             -->
-                            <div class="btn-group btn-group-sm " role="group" aria-label="TODO Options">
-                                <button type="button" class="btn btn-outline-light btn-sm"><i class="fas fa-check" style="font-size: 10px;"></i></button>
-                                <button type="button" class="btn btn-outline-light btn-sm"><i class="fas fa-edit" style="font-size: 10px;"></i></button>
-                                <button type="button" class="btn btn-outline-light btn-sm"><i class="fas fa-trash-alt" style="font-size: 10px;"></i></button>
-                            </div>
+                        <div class="btn-group btn-group-sm " role="group" aria-label="TODO Options">
+                            <button type="button" class="btn btn-outline-light btn-sm"><i class="fas fa-check"
+                                    style="font-size: 10px;"></i></button>
+                            <button type="button" class="btn btn-outline-light btn-sm"><i class="fas fa-edit"
+                                    style="font-size: 10px;"></i></button>
+                            <button type="button" class="btn btn-outline-light btn-sm"><i class="fas fa-trash-alt"
+                                    style="font-size: 10px;"></i></button>
+                        </div>
                         <!-- </div> -->
                     </div>
                     <div class="">
@@ -60,10 +63,41 @@
                     </div>
                 </div>
             </div>
-            <div class="row margin-right-0">
-                <div class="col-12 padding-0">
-                    
-                    <p class="bg-secondary">Dagar</p>
+            <div class="row justify-content-center row-cols-7 margin-right-0 text-center">
+                <p class="col">Måndag</p>
+                <p class="col">Tisdag</p>
+                <p class="col">Onsdag</p>
+                <p class="col">Torsdag</p>
+                <p class="col">Fredag</p>
+                <p class="col">Lördag</p>
+                <p class="col">Söndag</p>
+            </div>
+            <div class="row justify-content-center row-cols-7 margin-right-0">
+                <div class="daycontaner col" data-calenderDate="">
+                    <div class="row">
+                        <div class="day-Nr col">1</div>
+                        <div class="day-Nr col"><p class="m-0">sveriges nationaldag</p></div>
+                    </div>
+                    <div><p>0</p></div>
+
+                </div>
+                <div class="daycontaner col" data-calenderDate="">
+                    <div>2</div>
+                </div>
+                <div class="daycontaner col" data-calenderDate="">
+                    <div>3</div>
+                </div>
+                <div class="daycontaner col" data-calenderDate="">
+                    <div>4</div>
+                </div>
+                <div class="daycontaner col" data-calenderDate="">
+                    <div>5</div>
+                </div>
+                <div class="daycontaner col" data-calenderDate="">
+                    <div>6</div>
+                </div>
+                <div class="daycontaner col" data-calenderDate="">
+                    <div>7</div>
                 </div>
             </div>
         </div>
