--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="daycontaner col" data-calenderDate="">
                     <div class="row">
                         <div class="col">
-                            <div class="day-Nr">1</div>
+                            <div class="day-Nr red">1</div>
                             <div class="todo-nr">0</div>
                         </div>
                         <div class="day-red-day col">sveriges nationaldag</div>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="daycontaner col" data-calenderDate="">
                     <div class="row">
-                        <div class="day-Nr col">13</div>
+                        <div class="day-Nr col red">13</div>
                     </div>
                     <div class="todo-nr">0</div>
                 </div>
@@ -203,7 +203,7 @@
                 </div>
                 <div class="daycontaner col" data-calenderDate="">
                     <div class="row">
-                        <div class="day-Nr col">20</div>
+                        <div class="day-Nr col red">20</div>
                     </div>
                     <div class="todo-nr">0</div>
                 </div>
@@ -245,7 +245,7 @@
                 </div>
                 <div class="daycontaner col" data-calenderDate="">
                     <div class="row">
-                        <div class="day-Nr col">27</div>
+                        <div class="day-Nr col red">27</div>
                     </div>
                     <div class="todo-nr">0</div>
                 </div>
