--- a/index.html
+++ b/index.html
@@ -26,27 +26,21 @@
                 <p id="welcome-time">TID</p>
                 <p id="welcome-date" class="text-capitalize">DAGENS DATUM</p>
             </div>
-
             <div id="todocontainer" class="bg-success p-2">
                 <div class="d-flex flex-column todoitem">
-                    <div class="d-flex flex-row justify-content-between align-items-center">
+                    <div class="d-flex flex-column">
                         <div class="fs-6">
                             <p>TODO-Titel</p>
-                        </div>
-                        <!-- <div style="height: 1rem; width: auto;">                             -->
-                        <div class="btn-group btn-group-sm " role="group" aria-label="TODO Options">
-                            <button type="button" class="btn btn-outline-light btn-sm"><i class="fas fa-check"
-                                    style="font-size: 10px;"></i></button>
+                        </div>                        
+                        <div class="btn-group btn-group-sm" style="height: 1rem; align-items: center;" role="group" aria-label="TODO Options">
+                            <button type="button" class="btn btn-outline-light btn-sm" data-bs-toggle="button" autocomplete="off"><i class="fas fa-check"
+                                    style="font-size: 16px;"></i></button>
                             <button type="button" class="btn btn-outline-light btn-sm"><i class="fas fa-edit"
-                                    style="font-size: 10px;"></i></button>
+                                    style="font-size: 16px;"></i></button>
                             <button type="button" class="btn btn-outline-light btn-sm"><i class="fas fa-trash-alt"
-                                    style="font-size: 10px;"></i></button>
-                        </div>
-                        <!-- </div> -->
-                    </div>
-                    <div class="">
-                        <p>Information om din TODO</p>
-                    </div>
+                                    style="font-size: 16px;"></i></button>
+                        </div>                        
+                    </div>                    
                 </div>
             </div>
         </div>
