--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="./wwwroot/css/bootstrap.min.css">
     <link rel="stylesheet" href="./wwwroot/css/base.css">
 
-    <script defer src="wwwroot/js/welcome-clock.js"></script>
-    <script defer src="./wwwroot/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/80fd7dc215.js" crossorigin="anonymous"></script>
+    <script defer src="./wwwroot/js/bootstrap.bundle.min.js"></script>
+    <script defer src="./wwwroot/js/welcome-clock.js"></script>
+    <script defer src="./wwwroot/js/Calendar.js"></script>
 </head>
 
 <body>
@@ -73,7 +74,7 @@
                 <p class="col">Lördag</p>
                 <p class="col">Söndag</p>
             </div>
-            <div class="row justify-content-center row-cols-7 margin-right-0">
+            <div id="calendar-Days" class="row justify-content-center row-cols-7 margin-right-0">
                 <div class="daycontaner col temp" data-calenderDate="">
                     <div class="row">
                         <div class="col">
