added modal to plus-button

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo Calendar</title>
-    <link rel="stylesheet" href="./wwwroot/css/bootstrap.min.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="./wwwroot/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="./wwwroot/css/base.css">
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
     <script defer src="wwwroot/js/welcome-clock.js"></script>
-    <script defer src="./wwwroot/js/bootstrap.bundle.min.js"></script>
+    <!-- <script defer src="./wwwroot/js/bootstrap.bundle.min.js"></script> -->
     <script src="https://kit.fontawesome.com/80fd7dc215.js" crossorigin="anonymous"></script>
 </head>
 
@@ -46,6 +52,42 @@
                     </div>
                     <div class="">
                         <p>Information om din TODO</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Button trigger modal -->
+            <button class="btn btn-primary circle add-todo" data-bs-toggle="modal" data-bs-target="#newTodo">
+                <i class="fas fa-plus-circle"></i>
+            </button>
+            <!-- Modal -->
+            <div class="modal fade" id="newTodo" tabindex="-1" aria-labelledby="newTodoLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content bg-secondary">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="newTodoLabel">Skapa Ny ToDo</h5>
+                            <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="mb-3">
+                                    <label for="todoTitle" class="form-label">Titel</label>
+                                    <input type="text" class="form-control" id="todoTitle">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="startDate" class="form-label">Startdatum</label>
+                                    <input type="date" class="form-control" id="startDate">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="stopDate" class="form-label">Slutdatum</label>
+                                    <input type="date" class="form-control" id="stopDate">
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -274,10 +316,8 @@
             </div>
         </div>
     </div>
-    <!-- <button class="btn btn-primary circle add-todo"> -->
-    <button class="btn btn-primary circle add-todo">
-        <i class="fas fa-plus-circle"></i>
-    </button>
+
+
 </body>
 
 </html>
