--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <p class="col">Söndag</p>
             </div>
             <div id="calendar-Days" class="row justify-content-center row-cols-7 margin-right-0">
-                <div class="daycontaner col temp" data-calenderDate="">
+                <div class="daycontaner col temp">
                     <div class="row">
                         <div class="col">
                             <div class="day-Nr">1</div>
@@ -84,194 +84,6 @@
                         <div class="day-red-day col">sveriges nationaldag</div>
                     </div>
                 </div>
-                <div class="daycontaner col"></div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">1</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">2</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">3</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">4</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">5</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="col">
-                            <div class="day-Nr red">1</div>
-                            <div class="todo-nr">0</div>
-                        </div>
-                        <div class="day-red-day col">sveriges nationaldag</div>
-                    </div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">7</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">8</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">9</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">10</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">11</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">12</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col red">13</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">14</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">15</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">16</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">17</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">18</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">19</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col red">20</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">21</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">22</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">23</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">24</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">25</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">26</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col red">27</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">28</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">29</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col" data-calenderDate="">
-                    <div class="row">
-                        <div class="day-Nr col">30</div>
-                    </div>
-                    <div class="todo-nr">0</div>
-                </div>
-                <div class="daycontaner col"></div>
-                <div class="daycontaner col"></div>
-                <div class="daycontaner col"></div>
-                <div class="daycontaner col"></div>
             </div>
         </div>
     </div>
