--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- <link rel="stylesheet" href="./wwwroot/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="./wwwroot/css/base.css">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
     <script defer src="wwwroot/js/welcome-clock.js"></script>
@@ -60,8 +60,7 @@
                 <i class="fas fa-plus-circle"></i>
             </button>
             <!-- Modal -->
-            <div class="modal fade" id="newTodo" tabindex="-1" aria-labelledby="newTodoLabel"
-                aria-hidden="true">
+            <div class="modal fade" id="newTodo" tabindex="-1" aria-labelledby="newTodoLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content bg-secondary">
                         <div class="modal-header">
@@ -72,11 +71,21 @@
                             <form>
                                 <div class="mb-3">
                                     <label for="todoTitle" class="form-label">Titel</label>
-                                    <input type="text" class="form-control" id="todoTitle">
+                                    <input type="text" class="form-control" id="todoTitle" required>
+                                    <div class="invalid-feedback">
+                                        Ange en titel för din ToDo.
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="todoInfo" class="form-label">Information</label>
+                                    <textarea class="form-control" id="todoInfo" rows="3"></textarea>
                                 </div>
                                 <div class="mb-3">
                                     <label for="startDate" class="form-label">Startdatum</label>
-                                    <input type="date" class="form-control" id="startDate">
+                                    <input type="date" class="form-control" id="startDate" required>
+                                    <div class="invalid-feedback">
+                                        Ett datum måste väljas.
+                                    </div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="stopDate" class="form-label">Slutdatum</label>
@@ -86,7 +95,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save</button>
+                            <button type="submit" class="btn btn-primary">Save</button>
                         </div>
                     </div>
                 </div>
