--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <!-- <link rel="stylesheet" href="./wwwroot/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="./wwwroot/css/base.css">
 
+    <script defer src="wwwroot/js/main.js"></script>
+    <script defer src="wwwroot/js/welcome-clock.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
-    <script defer src="wwwroot/js/welcome-clock.js"></script>
     <!-- <script defer src="./wwwroot/js/bootstrap.bundle.min.js"></script> -->
     <script src="https://kit.fontawesome.com/80fd7dc215.js" crossorigin="anonymous"></script>
 </head>
